# PaperSearchAgent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/agents/: evidence_scorer.py  quality_reviewer.py  query_planner.py  state.py  summary_writer.py  supervisor.py  types.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: __init__.py  auth.py  library.py  search.py  teams.py  ws.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/mcp/: gateway.py
backend/app/models/: __init__.py  auth.py  common.py  search.py  team.py
backend/app/schemas/: auth.py  common.py  library.py  search.py  team.py
backend/app/services/: export_service.py  job_executor.py  jwt_service.py  llm_client.py  rbac.py  workflow_runner.py
backend/app/ws/: manager.py
backend/exports/: f3468d7c-d2f6-40e6-af5f-3c99c3ee5c65_20260314191553.csv
backend/tests/unit/: test_llm_fallback.py  test_routing.py
docs/plans/: 2026-03-14-app-control-script-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx  WorkspaceContext.tsx
frontend/src/pages/: AuthPage.tsx  ExportsPage.tsx  FavoritesPage.tsx  HistoryPage.tsx  TeamPage.tsx  WorkspacePage.tsx
scripts/: app.cmd  app.ps1
